--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -13,4 +13,4 @@ jobs:
       - name: 'Install markdownlint-cli'
         run: npm install -g markdownlint-cli
       - name: 'Lint markdown files'
-        run: markdownlint '**/*.md'
+        run: markdownlint '**/*.md' --disable MD013
